--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ nav > img{
     top: 40px;
     left:auto;
     right: auto;
-    background-image: url("imagens/plano\ fundo\ web.png") ;
+    background-image: url("imagens/planofundoweb.png") ;
     /* background-size: 100% 100%; */
     height: 400px;
     margin:0;
